feat: enhance ItemService with detailed Javadoc comments and streamline list conversion in controllers